--- a/views/tmpl/admin/facility/view-facility.html
+++ b/views/tmpl/admin/facility/view-facility.html
@@ -143,9 +143,9 @@
 									<p><label>Time Zone</label> {{facility.facility_timezone}}</p>
 									<p><label>Zip Code</label> {{facility.facility_zipcode}}</p>
 									<p><label>Status</label> {{facility.facility_status}}</p>
-									<p><label>Device</label> 22</p>
-									<p><label>Users</label> 45</p>
-									<p><label>Doors</label> 22</p>
+									<p><label>Device</label> {{facility.facility_device_count}}</p>
+									<p><label>Users</label> {{facility.facility_user_count}}</p>
+									<p><label>Doors</label> {{facility.facility_Door_count || 0}}</p>
 								</div>
 							</div>
 						</div>
