--- a/views/tmpl/admin/user/user-groups-members.html
+++ b/views/tmpl/admin/user/user-groups-members.html
@@ -97,8 +97,8 @@
 						<div class="thumb thumb-xxll mb-20">
 							<img class="img-circle" src="images/usergroups/officehrs.jpg" alt="">
 						</div>
-						<h3 class="mb-10"><strong>Office Hours</strong></h3>
-						<span class="text-muted">35 Users</span>
+						<h3 class="mb-10"><strong>{{currentSelectedGroupName}}</strong></h3>
+						<span class="text-muted">{{CurrentUserGroupUserCount}} Users</span>
 						<div class="mt-40">
 							<a ng-click="showConfirm($event, usergroup_id)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete User Group</a>
 						</div>
