--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -109,12 +109,12 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number</label>
-														<input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
+														<input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" disabled required>
 														<!-- <input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control mb-10" placeholder="" required> -->
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
-														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
+														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" disabled placeholder="" required>
 														<!-- <input type="text" name="" id="" ng-model="device.registration_code" class="form-control mb-10" placeholder="" required> -->
 													</div>
 												</div>
