Bugs resolved from bug list

--- a/views/tmpl/admin/facility/edit-facility.html
+++ b/views/tmpl/admin/facility/edit-facility.html
@@ -104,7 +104,7 @@
 							<a ng-click="showConfirm($event)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete facility</a>
 						</div>
 					</div> 
-					<div class="tile-body text-center p-0"> 
+					<!--<div class="tile-body text-center p-0"> 
 						<ul class="list-inline tbox m-0">
 							<li class="tcol bg-blue dker p-10">
 								<a ui-sref="app.admin.device.devices">
@@ -125,7 +125,7 @@
 								</a>
 							</li>
 						</ul>
-					</div>  
+					</div>  -->
 				</section>
 			</div>
 			
