--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -154,7 +154,7 @@
 														<label class="btn btn-default" ng-model="userData.status" uib-btn-radio="0">Inactive</label>
 													</div>
 												</div>													
-												<div class="form-group col-sm-6 col-md-3" ng-hide="radioModel=='Inactive'">
+												<div ng-show="userData.status == 1" class="form-group col-sm-6 col-md-3" ng-hide="radioModel=='Inactive'">
 													<label for="">Expiration Date</label>
 													<div class="input-group userexp" ng-controller="DatepickerDemoCtrl" >
 														<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" ng-model="userData.expiration_date"/>
