--- a/views/tmpl/admin/device/view-device.html
+++ b/views/tmpl/admin/device/view-device.html
@@ -116,7 +116,7 @@
 				</section>
 			</div>
 			
-			<div class="col-sm-12 col-md-8" ng-controller="ViewDeviceCtrl"> 
+			<div class="col-sm-12 col-md-8" ng-controller="ViewDeviceCtrl" ng-init="dependentDeviceInit()"> 
 				<section class="tile tile-simple"> 
 					<div class="tile-body p-0"> 
 						<uib-tabset class="tabs-dark">
