Commented create date

--- a/elika-warehouse/views/tmpl/inventory/view-device.html
+++ b/elika-warehouse/views/tmpl/inventory/view-device.html
@@ -98,7 +98,7 @@
 								<div class="row">
 									<div class="col-sm-12 col-md-12">
 										<div class="form-group profiledetail">
-											<p><label>Create Date</label> {{device.device_created_on}}</p>
+											<!-- <p><label>Create Date</label> {{device.device_created_on}}</p> -->
 											<p><label>Device Model</label> {{device.device_model}}</p>
 											<p><label>Device Name</label> {{device.device_name}}</p>
 											<p><label>Client</label> Un-registered</p>
@@ -111,8 +111,8 @@
 											<p><label>Camera</label> N/A <span class="pull-right w-60"><a href="" class="text-danger text-sm"><strong>Reset</strong></a></span></p>
 											<p><label>Wiegand</label> {{device.device_wiegand}} <span class="pull-right w-60"><a href="" class="text-danger text-sm"><strong>Reset</strong></a></span></p>
 											<p><label>Bluetooth Mac Id</label> {{device.device_mac_address}} <span class="pull-right w-60"><a href="" class="text-danger text-sm"><strong>Reset</strong></a></span></p>
-											<p><label>Main Board</label> 030000 <span class="pull-right w-60"><a href="" class="text-danger text-sm"><strong>Reset</strong></a></span></p>
-											<p><label>Front Board</label> 030000 <span class="pull-right w-60"><a href="" class="text-danger text-sm"><strong>Reset</strong></a></span></p>
+											<p><label>Main Board</label> F.W. Rev No. <span class="pull-right w-60"><a href="" class="text-danger text-sm"><strong>Reset</strong></a></span></p>
+											<p><label>Front Board</label> F.W. Rev No. <span class="pull-right w-60"><a href="" class="text-danger text-sm"><strong>Reset</strong></a></span></p>
 										</div>
 									</div>
 								</div>
