--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -206,7 +206,7 @@
 												<p><span>Client</span> : {{ device.facility_name | warehouseClientName}}</p>
 												<p><span>Serial No.</span> : {{ device.device_serial_no }}</p>
 												<p><span>Reg Code</span> : {{ device.device_registration_code }}</p>
-												<p><span>Create Date</span> : {{ device.device_created_on | date :  "dd.MM.y"  }}</p>
+												<!-- <p><span>Create Date</span> : {{ device.device_created_on | date :  "dd.MM.y"  }}</p> -->
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.inventory.view-device({device_id:device.device_id})">View</a>
