--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -99,7 +99,7 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Device Name</label>
-														<input type="text" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required>
+														<input type="text" maxlength="30" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Model Name</label>
@@ -112,12 +112,12 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number</label>
-														<input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
+														<input type="text" maxlength="20" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
 														<!-- <input type="text" name="serial_no" id="" ng-model="device.serial_no" class="form-control mb-10" placeholder="" required> -->
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code</label>
-														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
+														<input type="text" maxlength="30" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
 														<!-- <input type="text" name="" id="" ng-model="device.registration_code" class="form-control mb-10" placeholder="" required> -->
 													</div>
 												</div>
