--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -99,11 +99,11 @@
 												<span class="error">{{fac_error}}</span>
 												<div class="form-group">
 													<label for="">Facility Name</label>
-													<input type="text" name="facility_name" ng-model="facility.facility_name" id="" class="form-control" placeholder="" required>
+													<input type="text" name="facility_name" maxlength="30" ng-model="facility.facility_name" id="" class="form-control" placeholder="" required>
 												</div>
 												<div class="form-group">
 													<label for="">Facility Location</label>
-													<input type="text" name="facility_location" id="" ng-model="facility.facility_location" class="form-control" placeholder="" required>
+													<input type="text" name="facility_location" id="" maxlength="30" ng-model="facility.facility_location" class="form-control" placeholder="" required>
 												</div>
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
@@ -122,7 +122,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Zip Code</label>
-														<input type="text" name="zip_code" id="" ng-model="facility.zip_code" class="form-control" placeholder="" required>
+														<input ng-keypress="allowNumberOnly($event);" type="text" name="zip_code" id="" maxlength="6" ng-model="facility.zip_code" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="form-group">
@@ -228,9 +228,9 @@
 												<p>{{ facility.facility_device_count }} Devices &nbsp;|&nbsp; {{ facility.facility_user_count }} Users</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.facility.view-facility({facility_id:facility.facility_id})">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.facility.edit-facility({facility_id:facility.facility_id})">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
+												<button class="btn btn-orange btn-border btn-rounded btnMargin" ui-sref="app.admin.facility.view-facility({facility_id:facility.facility_id})">View</button>
+												<button class="btn btn-success btn-border btn-rounded btnMargin" ui-sref="app.admin.facility.edit-facility({facility_id:facility.facility_id})">Edit</button>
+												<button class="btn btn-danger btn-border btn-rounded btnMargin" disabled ng-click="showConfirm($event)">Delete</button>
 											</div>
 										</md-card>										
 									</md-content>
