--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -154,7 +154,7 @@
 											<div class="modal-body p-0">
 												<span class="error">{{AccessCodeMessage}}</span>
 												<div class="row">
-													<form role="form"  ng-submit="submitEditAccessCode(editAccess, access_edit_form)" ng-validate="validationOptions" name="access_edit_form">
+													<!-- <form role="form"  ng-submit="submitEditAccessCode(editAccess, access_edit_form)" ng-validate="validationOptions" name="access_edit_form">
 														<div class="form-group col-sm-6 col-md-4">
 															<label for="">Access Code</label>
 															<div style="position: relative">
@@ -175,7 +175,7 @@
 															</div>
 															<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a pull-right">Add/Save</button>
 														</div>
-													</form>
+													</form> -->
 												</div>
 												<div class="mt-40">			
 													<div class="tile-body p-0 table-responsive">
@@ -214,7 +214,7 @@
 											<uib-accordion-heading>Phone Code <i class="pull-right fa" ng-class="{'fa-minus': status.open1, 'fa-plus': !status.open1}"></i></uib-accordion-heading>
 											<div class="modal-body p-0">
 												<div class="row">
-													<form ng-submit="submitEditPhoneCode(phoneedit, phone_edit_form)" ng-validate="validationOptions" name="phone_edit_form">
+													<!-- <form ng-submit="submitEditPhoneCode(phoneedit, phone_edit_form)" ng-validate="validationOptions" name="phone_edit_form">
 														<div class="form-group col-sm-3 col-md-4">
 															<label for="">Phone Code</label>
 															<div style="position: relative">
@@ -239,7 +239,7 @@
 															</div>
 															<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a pull-right">Add/Save</button>
 														</div>
-													</form>
+													</form> -->
 												</div>
 												<div class="mt-40">				
 													<div class="tile-body p-0 table-responsive">
@@ -280,7 +280,7 @@
 											<uib-accordion-heading>RFID Code <i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i></uib-accordion-heading>
 											<div class="modal-body p-0">
 												<div class="row">
-													<form ng-submit="submitEditRFIDCode(editRfid, rfid_form)" name="rfid_form" ng-validate="validationOptions" >
+													<!-- <form ng-submit="submitEditRFIDCode(editRfid, rfid_form)" name="rfid_form" ng-validate="validationOptions" >
 														<div class="form-group col-sm-3 col-md-4">
 															<label for="">Card Number</label>
 															<input type="text" class="form-control number" ng-keypress="onlyNumber($event)" id="" ng-model="editRfid.rfid_card_no" name="rfid_card_no" required>
@@ -302,7 +302,7 @@
 															</div>
 															<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a pull-right">Add/Save</button>
 														</div>
-													</form>
+													</form> -->
 												</div>
 												<div class="mt-40">							
 													<div class="tile-body p-0 table-responsive">
@@ -344,7 +344,7 @@
 											<div class="modal-body p-0">
 												<div class="row">
 													<span class="error">{{NfcCodeMessage}}</span>
-													<form ng-submit="submitEditNfcCode(editNfc, nfc_edit_form)" ng-validate="validationOptions" name="nfc_edit_form">
+													<!-- <form ng-submit="submitEditNfcCode(editNfc, nfc_edit_form)" ng-validate="validationOptions" name="nfc_edit_form">
 														<div class="form-group col-sm-3 col-md-4">
 															<label for="">NFC Code</label>
 															<input type="text" class="form-control w-md" id="" value="xxxxxx-xx" name="nfc_code" ng-model="editNfc.nfc_code" required>
@@ -362,7 +362,7 @@
 															</div>
 															<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a pull-right">Add/Save</button>
 														</div>
-													</form>
+													</form> -->
 												</div>
 												<div class="mt-40">							
 													<div class="tile-body p-0 table-responsive">
@@ -402,7 +402,7 @@
 											<div class="modal-body p-0">
 												<div class="row">
 													<span class="error">{{ bleerror }}</span>
-													<form ng-submit="submitEditBLECode(editBle, ble_edit_form)" ng-validate="validationOptions" name="ble_edit_form">
+													<!-- <form ng-submit="submitEditBLECode(editBle, ble_edit_form)" ng-validate="validationOptions" name="ble_edit_form">
 														<div class="form-group col-sm-3 col-md-4">
 															<label for="">Username</label>
 															<input type="text" class="form-control" id="" ng-model="editBle.ble_name" name="ble_name" required>
@@ -424,7 +424,7 @@
 															</div>
 															<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a pull-right">Add/Save</button>
 														</div>
-													</form>
+													</form> -->
 												</div>
 												<div class="mt-40">							
 													<div class="tile-body p-0 table-responsive">
