--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -207,7 +207,7 @@
 																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox" value="{{user_group.usergroup_id}}" name="" ng-model="usergroup.usergrouparr[user_group.usergroup_id]" ><i></i> {{user_group.usergroupName}} <small>({{user_group.count}} Users)</small></label>
 																		</li>
 																	</ul>
-																	<a ui-sref="app.admin.user.user-groups" ng-click="cancel()" class="pull-right mt-15 mb-20">Create User Group</a>
+																	<!-- <a ui-sref="app.admin.user.user-groups" ng-click="cancel()" class="pull-right mt-15 mb-20">Create User Group</a> -->
 																</div>
 															</div>
 														</div>
@@ -315,7 +315,7 @@
 														<div class="form-group col-sm-3 col-md-3">
 															<label for="">Phone Code</label>
 															<div style="position: relative">
-																<input type="text" name="access_code" id="phone_code" class="form-control mb-10" disabled ng-model="phoneCode.phone_code">
+																<input type="text" name="access_code" id="phone_code" class="form-control" disabled ng-model="phoneCode.phone_code">
 																<span class="refreshbtn" ng-click="generateAddPhoneCode()"><i class="fa fa-refresh"></i></span>
 															</div>
 														</div>													
