--- a/views/tmpl/forgot-password.html
+++ b/views/tmpl/forgot-password.html
@@ -17,7 +17,7 @@
 					<input type="email" class="form-control underline-input" placeholder="Email Address" ng-model="user.email" required>
 				</div>
 				
-				<!-- <div class="form-group">
+				<div class="form-group">
 					<select id="selectedQuestion1" name="selectedQuestion1" class="form-control underline-input mb-20">
 						<option value="?" selected="selected">Select Secret Question</option>
 						<option value="1" label="What was your favorite place to visit as a child?">What was your favourite place to visit as a child?</option>
@@ -40,7 +40,7 @@
 				
 				<div class="form-group">
 					<input type="text" class="form-control underline-input" placeholder="Answer" ng-model="user.answer" required>
-				</div> -->
+				</div>
 				
 				<div class="form-group text-left mt-20">  
 					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>Submit</button>
@@ -54,12 +54,20 @@
 </section>
 <script type="text/javascript">
 	$(document).ready(function() {
-	    var popuph = document.getElementById('hpopup').offsetHeight;
-		$('.w-450').css({
-	        'position' : 'absolute',
-	        'left' : '47.5%',
-	        'top' : '50%',	        
-			'margin-top' : -popuph/2,
-	    });
+		var winw = $(window).width();
+	    var winh = $(window).height();
+		/*alert(winw);
+		alert(winh);*/
+		if(winh>450 && winw > 1140) {
+			var popuph = document.getElementById('hpopup').offsetHeight;
+			var mtop = popuph - 45;
+			$('.w-450').css({
+				'position' : 'absolute',
+				'left' : '50%',
+				'top' : '50%',	        
+				'margin-top' : -mtop/2,
+				'margin-left' : -30,
+			});
+		}
 	});
 </script>
