--- a/views/tmpl/login.html
+++ b/views/tmpl/login.html
@@ -21,28 +21,36 @@
 
 				<div style="font-size: 16px; text-align: left; margin: -15px 0 0; color: #ff0000;">{{message}}</div>
 				
-				<div class="form-group text-left mt-20">        
+				<div class="form-group text-left mt-20 mb-0">        
 					<label class="checkbox checkbox-custom checkbox-custom-sm inline-block" style="font-weight: 400; font-size: 16px;">
 						<input type="checkbox"><i></i> Remember me
 					</label>
 					<a ui-sref="core.forgot-password" class="pull-right mt-10" style="font-weight: 400; font-size: 16px; color:#0eba8c;">Forgot Password?</a><br/>
-					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="loginFunction()" ng-disabled='form.$invalid'>GO</button>
+					<button type="submit" class="btn btn-grey b-0 br-2 mt-40 m-0-auto" ng-click="loginFunction()" ng-disabled='form.$invalid'>GO</button>
 				</div>
 			</form>
-			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
+			<!-- <div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
 				<p class="m-0"><a ui-sref="core.signup">Register a new membership</a></p>
-			</div>
+			</div> -->
 		</div>
 	</div>	
 </section>
 <script type="text/javascript">
 	$(document).ready(function() {
-	    var popuph = document.getElementById('hpopup').offsetHeight;
-		$('.w-450').css({
-	        'position' : 'absolute',
-	        'left' : '47.5%',
-	        'top' : '50%',	        
-			'margin-top' : -popuph/2,
-	    });
+		var winw = $(window).width();
+	    var winh = $(window).height();
+		/*alert(winw);
+		alert(winh);*/
+		if(winh>450 && winw > 1140) {
+			var popuph = document.getElementById('hpopup').offsetHeight;
+			var mtop = popuph - 45;
+			$('.w-450').css({
+				'position' : 'absolute',
+				'left' : '50%',
+				'top' : '50%',	        
+				'margin-top' : -mtop/2,
+				'margin-left' : -30,
+			});
+		}
 	});
 </script>
