--- a/views/tmpl/otp.html
+++ b/views/tmpl/otp.html
@@ -1,22 +1,49 @@
-<div class="page page-core page-login">
-	<div class="text-center logo-login"></div>
-	<div class="container w-360 p-15 bg-white mt-40 text-center login-box-shadow">
-
-		<h2 class="login-h2 text-greensea">One Time Password?</h2>
-
-		<form name="form" class="form-validation mt-20" novalidate>
-			<p class="help-block text-left">The OTP has been send on your e-mail address.</p>
-
-			<div class="form-group">
-				<input type="text" class="form-control underline-input" placeholder="OTP" maxlength="6" ng-model="user.otp" required>
-			</div>
-	  
-			<button type="submit" class="btn btn-greensea b-0 br-2" ng-click="login()" ng-disabled='form.$invalid'>Submit</button>
-		</form>
-
-		<div class="bg-slategray lt wrap-reset mt-20">
-			<p class="m-0"><a ui-sref="core.login">Back to login</a></p>
+<section id="loginwrap">
+	<div class="leftwrap">
+		<div class="newlogo">
+			<img src="images/logo.png">
 		</div>
-
+		<div class="welcometxt">
+			<h1>Welcome <span>Back!</span></h1>
+		</div>
 	</div>
-</div>
+	<div class="page page-core page-login core-new">
+		<div id="hpopup" class="container w-450 p-40 bg-white text-center login-box-shadow borderradius6">
+			<h2 class="login-h2 text-greensea">One Time Password</h2>
+			<form name="form" class="form-validation mt-20" novalidate>
+			
+				<p class="help-block text-left" style="font-weight: 400; font-size: 16px; margin-bottom: 30px;">The OTP has been send on your e-mail address.</p>
+				
+				<div class="form-group">
+					<input type="text" class="form-control underline-input" placeholder="One Time Password" maxlength="6" ng-model="user.otp" required>
+				</div>
+				
+				<div class="form-group text-left mt-20">  
+					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>Submit</button>
+				</div>
+			</form>
+			<div class="bg-slategray dker seagreen wrap-reset negmargin40 mt-20">
+				<p class="m-0"><a ui-sref="core.login">Back to login</a></p>
+			</div>
+		</div>
+	</div>	
+</section>
+<script type="text/javascript">
+	$(document).ready(function() {
+		var winw = $(window).width();
+	    var winh = $(window).height();
+		/*alert(winw);
+		alert(winh);*/
+		if(winh>450 && winw > 1140) {
+			var popuph = document.getElementById('hpopup').offsetHeight;
+			var mtop = popuph - 45;
+			$('.w-450').css({
+				'position' : 'absolute',
+				'left' : '50%',
+				'top' : '50%',	        
+				'margin-top' : -mtop/2,
+				'margin-left' : -30,
+			});
+		}
+	});
+</script>
