--- a/elika-warehouse/views/tmpl/inventory/edit-device.html
+++ b/elika-warehouse/views/tmpl/inventory/edit-device.html
@@ -127,7 +127,7 @@
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Bluetooth Mac Id</label>
-										<input type="text" name="" id="" class="form-control" ng-model="device.device_mac_address" placeholder="">
+										<input type="text" name="" id="" class="form-control" ng-model="device.device_mac_address" placeholder="" disabled>
 									</div>
 								</div>
 								<div class="row">
