--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -127,16 +127,16 @@
 								<form name="add_dependent" role="form" id="add_dependent" ng-validate="validationOptions">
 									<div class="modal-body mt-5">											
 										<div class="row">
-											<div class="form-group col-sm-6 col-md-6">
+											<div class="form-group col-sm-12 col-md-12">
 												<label for="">Device Name</label>
 												<input type="text" name="device_name" id="" ng-model="editDevice.device_name" class="form-control" placeholder="" required>
 											</div>
-											<div class="form-group col-sm-6 col-md-6">
+											<!---<div class="form-group col-sm-6 col-md-6">
 												<label for="">Model Name</label>
 												<select name="model_name" ng-model="editDevice.model_name" class="form-control" ng-options="model for model in deviceModel" required>
 													<option value="">Select</option>
 												</select>
-											</div>
+											</div>-->
 										</div>
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
