--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -134,7 +134,7 @@
 																<thead>
 																	<tr>
 																		<th>Door/Door Groups</th>
-																		<th width="222">Schedule Groups{{doorlist.schedulelist}}</th>
+																		<th width="222">Schedule Groups</th>
 																	</tr>
 																</thead>
 																<tbody>
@@ -152,7 +152,7 @@
 																</tbody>
 															</table>
 															<div class="modal-footer" style="margin: 20px -15px -15px;">
-																<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
+																<div class="btn btn-success btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Done</div>
 															</div>
 														</div>
 													</md-content>
@@ -236,7 +236,8 @@
 							<div ng-class="class">
 								<div class="glview">
 									<md-content>			
-										<md-card ng-repeat="user in usergroups | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
+										<!-- <md-card ng-repeat="user in usergroups | filter:text | filter:title | filter:facility | orderBy:myOrderBy"> -->
+										<md-card ng-repeat="user in usergroups">
 											<img ng-src="{{imagePath}}/usergroups/{{user.imagename}}.jpg" class="md-card-image img100percent" alt="Washed Out">
 											<md-card-content>
 												<h2 class="md-title">{{ user.usergroup_name }}</h2>	
@@ -275,7 +276,7 @@
 																</md-content>
 																</md-tab>
 																
-																<md-tab label="Door Schedule">
+																<md-tab label="Door Schedule" ng-click="listDoorSchedule(usergroupedit.usergroup_id, usergroupedit.facility_id)">
 																<md-content>
 																	<div class="tile-body p-15">
 																		<table class="table table-bordered">
@@ -292,15 +293,13 @@
 																						<span class="loader" id="{{doorlist.ud_id}}" style="display: none;"><i class="fa fa-spinner fa-spin" aria-hidden="true"></i></span>
 																						<select class="form-control" ng-model="doorlist.is_access_allowed" ng-options="item.is_access_allowed as item.name for item in doorlist.schedulelist" ng-change="addDoorScheduleUserGroup(doorlist.schedule_id, doorlist.ud_id,doorlist.is_access_allowed)"  >
 																						</select>
-																						<!-- <select class="form-control" ng-model="schedule_id" ng-options="item.id as item.name for item in doorlist.schedulelist" ng-change="addDoorScheduleUserGroup(schedule_id, doorlist.ud_id,doorlist.is_access_allowed)"> -->
-																					<!-- 	<option value="">Select Schedule Group</option>
-																						</select> -->
+																						
 																					</td>
 																				</tr>
 																			</tbody>
 																		</table>
 																		<div class="modal-footer" style="margin: 20px -15px -15px;">
-																			<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
+																			<div class="btn btn-success btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Done</div>
 																		</div>
 																	</div>
 																</md-content>
