--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -190,7 +190,7 @@
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-40">
 								<div class="col-sm-3 col-md-3 filterorder">
-									<label class="control-label" ng-init="filtershow=true">
+									<!--<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
 									<label class="control-label" uib-dropdown on-toggle="toggled(open)">
@@ -200,7 +200,7 @@
 											<li><a href="" ng-click="orderByMe('facility')">Facility</a></li>
 											<li><a href="" ng-click="orderByMe('model')">Model</a></li>
 										</ul>
-									</label>
+									</label>-->
 								</div>
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
@@ -238,7 +238,7 @@
 										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a>
 									</div>
 								</div>
-								<div class="filterfields" ng-hide="filtershow">
+								<!--<div class="filterfields" ng-hide="filtershow">
 									<div class="col-sm-4 col-md-3">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
@@ -251,7 +251,7 @@
 										<label for="fblocation" class="control-label">Search by facility</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="facility">
 									</div>
-								</div>
+								</div>-->
 							</div>
 							<div ng-if="result">									
 								<div layout="row" ng-class="statusclass">									
@@ -259,9 +259,9 @@
 								</div>
 							</div>
 							<div ng-class="class">
-								<div class="glview">
+								<div class="glview" ng-init="deviceInit()">
 									<md-content>			
-										<md-card ng-repeat="device in data | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
+										<md-card ng-repeat="device in data">
 											<span class="moreitemsondevice">
 												<a ui-sref="app.admin.device.service-plan"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
 												<a ui-sref="app.admin.settings({device_id:device.device_id})"><i class="fa fa-cog" aria-hidden="true"></i></a>
@@ -275,7 +275,7 @@
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.view-device({device_id:device.device_id})">View</a>
 												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.device.edit-device({device_id:device.device_id})">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm(device.device_id)">Delete</a>
+												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm(device.device_id,device.device_facility_id)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
