--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -109,6 +109,7 @@
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Time Zone</label>
 														<select class="form-control" ng-model="facility.timezone" required>
+															<option value="">Select Time Zone</option>
 															<option>USA (Alaska)</option>
 															<option>USA (Samoa)</option>
 															<option>USA (Pacific)</option>
@@ -149,7 +150,7 @@
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-40">
 								<div class="col-sm-3 col-md-3 filterorder">
-									<label class="control-label" ng-init="filtershow=true">
+									<!--<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
 									<label class="control-label" uib-dropdown on-toggle="toggled(open)">
@@ -159,7 +160,7 @@
 											<li><a href="" ng-click="orderByMe('facility')">Facility</a></li>
 											<li><a href="" ng-click="orderByMe('model')">Model</a></li>
 										</ul>
-									</label>
+									</label>-->
 								</div>
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
@@ -197,7 +198,7 @@
 										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a>
 									</div>
 								</div>
-								<div class="filterfields" ng-hide="filtershow">
+								<!--<div class="filterfields" ng-hide="filtershow">
 									<div class="col-sm-4 col-md-3">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
@@ -210,7 +211,7 @@
 										<label for="fblocation" class="control-label">Search by facility</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="facility">
 									</div>
-								</div>
+								</div>-->
 							</div>
 							<div ng-if="result">									
 								<div layout="row" ng-class="statusclass">									
