--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -202,6 +202,7 @@
 														<div class="hometabs">
 															<div class="overflow groupslists">
 																<div class="col-md-12 mt-20">
+																	<h3 class="custom-font ng-binding emptyMsg" ng-show="!usergroups.length">No User Group Available for Currently selected Facility. Please add a group to this Facility</h3>
 																	<ul>
 																		<li ng-repeat="user_group in usergroups">
 																			<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox" value="{{user_group.usergroup_id}}" name="" ng-model="usergroup.usergrouparr[user_group.usergroup_id]" ><i></i> {{user_group.usergroupName}} <small>({{user_group.count}} Users)</small></label>
@@ -213,7 +214,7 @@
 														</div>
 														<div class="modal-footer">
 															<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c closeg" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
-															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+															<button ng-show="usergroups.length" type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
 														</div>
 													</form>											
 												</script>
