--- a/views/tmpl/admin/user/user-groups-members.html
+++ b/views/tmpl/admin/user/user-groups-members.html
@@ -95,7 +95,7 @@
 				<section class="tile tile-simple">
 					<div class="leftdetail tile-widget p-30 text-center">
 						<div class="thumb thumb-xxll mb-20">
-							<img class="img-circle" src="images/usergroups/officehrs.jpg" alt="">
+							<img class="img-circle" src="images/usergroups/officehrs.png" alt="">
 						</div>
 						<h3 class="mb-10"><strong>{{currentSelectedGroupName}}</strong></h3>
 						<span class="text-muted">{{CurrentUserGroupUserCount}} Users</span>
