--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -108,7 +108,7 @@
 					<div class="tile-body text-center bg-blue p-0"> 
 						<ul class="list-inline tbox m-0">
 							<li class="tcol bg-blue dker p-10">
-								<h2 class="m-0">3</h2>
+								<h2 class="m-0">{{groupcount}}</h2>
 								<span class="text-transparent-white">User Groups</span>
 							</li>
 						</ul>
