--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -89,7 +89,7 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Phone Number</label>
-														<input type="text" name="" id="" class="form-control" ng-model="device.phone_no" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
+														<input type="text" name="" id="" class="form-control" ng-model="device.phone_no" maxlength="15" onkeypress='return event.charCode >= 48 && event.charCode <= 57' placeholder="">
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Bluetooth Mac Id</label>
