--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -275,7 +275,7 @@
 											<div class="md-actions" layout="row" layout-align="center center">
 												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.device.view-device({device_id:device.device_id})">View</a>
 												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.device.edit-device({device_id:device.device_id})">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm(device.device_id)">Delete</a>
+												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm(device.device_id,device.device_facility_id)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
