--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -109,6 +109,7 @@
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Time Zone</label>
 														<select class="form-control" ng-model="facility.timezone" required>
+															<option value="">Select</option>
 															<option>USA (Alaska)</option>
 															<option>USA (Samoa)</option>
 															<option>USA (Pacific)</option>
