--- a/views/tmpl/admin/device/view-device.html
+++ b/views/tmpl/admin/device/view-device.html
@@ -108,7 +108,7 @@
 					<div class="tile-body text-center bg-blue p-0"> 
 						<ul class="list-inline tbox m-0">
 							<li class="tcol p-10">
-								<h2 class="m-0">3</h2>
+								<h2 class="m-0">details.device_slave_count</h2>
 								<span class="text-transparent-white">Dependent Devices</span>
 							</li>
 						</ul>
