--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -182,6 +182,7 @@
 													<div class="form-group col-sm-3 col-md-3">
 														<label for="">Firstly Select facility</label><br/>
 														<select class="form-control"  ng-model="facility" ng-options="item.facility_id as item.facility_name for item in facilityList  track by item.facility_id" ng-change="unassignedGroup(facility)" >
+															<option value="">Select</option>
 														</select>
 													</div>
 												</div>
